[package]
name = "pastebin-server"
version = "0.4.0"
edition = "2021"
publish = false

[dependencies]
anyhow = "1.0.89"
axum = "0.7.7"
bytestring = { version = "1.4.0", features = ["serde"] }
camino = "1.1.9"
clap = { version = "4.5.19", features = ["derive"] }
mobc-redis = "0.8.2"
rand = "0.8.5"
regex = "1.11.0"
serde = { version = "1.0.210", features = ["derive"] }
serde_json = "1.0.128"
serde_repr = "0.1.19"
short-crypt = "1.0.28"
thiserror = "2.0.3"
tokio = { version = "1.41.0", features = ["full"] }
toml = "0.8.19"
tower = { version = "0.5.1", features = ["limit", "buffer", "load-shed"] }
tracing = "0.1.40"
tracing-futures = "0.2.5"
tracing-subscriber = { version = "0.3.18", features = ["env-filter", "time", "local-time"] }
