[package]
name = "pastebin-server"
version = "0.4.0"
edition = "2021"
publish = false

[dependencies]
anyhow = "1.0.89"
axum = "0.7.9"
bytestring = { version = "1.5.0", features = ["serde"] }
camino = "1.2.1"
clap = { version = "4.5.19", features = ["derive"] }
mobc-redis = "0.9.0"
rand = "0.9.0"
regex = "1.12.2"
serde = { version = "1.0.210", features = ["derive"] }
serde_json = "1.0.128"
serde_repr = "0.1.19"
short-crypt = "1.0.28"
thiserror = "2.0.3"
tokio = { version = "1.48.0", features = ["full"] }
toml = "0.9.8"
tower = { version = "0.5.1", features = ["limit", "buffer", "load-shed"] }
tracing = "0.1.40"
tracing-futures = "0.2.5"
tracing-subscriber = { version = "0.3.18", features = ["env-filter", "time", "local-time"] }
